# dgd-benchmark

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  run_benchmarks.sh
benchmarks/: CMakeLists.txt  convergence_bm.cc  dsf_bm.cc  mesh_bm.cc  polytope_dcol_bm.jl  polytope_dgd_bm.cc  primitive_bm.cc  primitive_dcol_bm.jl
benchmarks/helpers/: CMakeLists.txt  arrow_utils.h  benchmark_interface.cc  benchmark_interface.h  benchmark_result.cc  benchmark_result.h  benchmark_result.jl  convergence_result.cc  convergence_result.h  mesh_loader.jl  random_utils.jl  socp_solver.jl
include/dgd_benchmark/: benchmark_interface.h  benchmark_result.h  convex_set_generator.h  data_types.h  file_io.h  timer.h  utils.h
include/dgd_benchmark/dsf/: dsf.h  dsf_collision.h  dsf_interface.h  precompiled.h  utils.h
include/dgd_benchmark/ie/: internal_expanding.h
include/dgd_benchmark/inc/: data_types.h  incremental.h  linear_solver.h  polyhedron.h  solution_error.h
include/dsf/: dsf.h  dsf_collision.h  dsf_interface.h  precompiled.h  utils.h
include/ie/: internal_expanding.h
include/inc/: data_types.h  incremental.h  linear_solver.h  polyhedron.h  solution_error.h
julia/: mesh_loader.jl  setup_julia_env.jl
libraries/dcf/: CMakeLists.txt  dcf_collision.cc  dcf_collision.h  dsf.h  dsf_interface.h  precompiled.h  utils.h
libraries/dsf/: CMakeLists.txt  dsf.h  dsf_collision.cc  dsf_collision.h  dsf_interface.h  utils.h
libraries/ie/: CMakeLists.txt  internal_expanding.h
libraries/inc/: CMakeLists.txt  data_types.h  incremental.cc  incremental.h  linear_solver.h  polyhedron.cc  polyhedron.h  solution_error.h
logs/: .gitignore
plots/: bm_plot.py  log_reader.py
plots/plotting_tools/: __init__.py  common_plotting.py  data_reader.py  ieee_config.py
scripts/: setup_julia_env.jl
src/: CMakeLists.txt  benchmark_interface.cc  convex_set_generator.cc  file_io.cc
src/dsf/: dsf_collision.cc  dsf_interface.cc
src/inc/: incremental.cc  polyhedron.cc
tests/: CMakeLists.txt  dcf_test.cc  dcol_test.jl  dsf_test.cc  ie_test.cc  inc_test.cc  mesh_loader_test.jl  primitive_generator_test.jl
